--- a/ui/DoistDemo/package.json
+++ b/ui/DoistDemo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "DoistHelloWorld",
+  "name": "DoistDemo",
   "version": "1.0.0",
-  "description": "Describe DoistHelloWorld here",
+  "description": "DoistDemo",
   "private": true,
   "scripts": {
     "build": "nwb build-react-app",
