--- a/ui/DoistDemo/package.json
+++ b/ui/DoistDemo/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-html5video": "^2.5.1"
   },
   "devDependencies": {
     "nwb": "0.23.x"
