--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "DoistDemo",
+  "name": "KpsPortfolio_Website",
   "version": "1.0.0",
-  "description": "DoistDemo",
-  "private": true,
+  "description": "KpsPortfolio Website",
+  "main": "index.js",
   "scripts": {
-    "build": "nwb build-react-app",
-    "clean": "nwb clean-app",
-    "start": "nwb --host 172.31.86.166 --port 3000 serve-react-app",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
+  "author": "CodeMix",
+  "license": "ISC",
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-html5video": "^2.5.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "^2.1.5"
   },
-  "devDependencies": {
-    "nwb": "0.23.x"
-  },
-  "author": "",
-  "license": "MIT",
-  "repository": ""
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
