--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "nwb build-react-app",
     "clean": "nwb clean-app",
-    "start": "nwb --host localhost --port 3000 serve-react-app",
+    "start": "nwb --host 172.31.86.166 --port 3000 serve-react-app",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-html5video": "^2.5.1"
   },
   "devDependencies": {
